src/objects/Program_Cycle__c.object
<CustomObject>
    <fields>
        <fullName>CIRT_Eligible_Cycle__c</fullName>
        <description>End Date is null and Track End Date is in the past  or End Date later than Track End Date</description>
        <formula>OR((Track_End_Date__c &lt; End_Date__c),AND(ISBLANK(End_Date__c),Track_End_Date__c &lt; Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIRT Eligible Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_End_Date__c</fullName>
        <label>City End Date</label>
        <summarizedField>Tier__c.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Tier__c.City_Percentage__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Tier__c.Program_Cycle__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>City_Start_Date__c</fullName>
        <label>City Start Date</label>
        <summarizedField>Tier__c.Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Tier__c.City_Percentage__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Tier__c.Program_Cycle__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Cycles</relationshipLabel>
        <relationshipName>Program_Cycles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Date__c</fullName>
        <label>Compliance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Tier_Old__c</fullName>
        <label>Current Tier Old</label>
        <summarizedField>Tier__c.Tier_Number__c</summarizedField>
        <summaryFilterItems>
            <field>Tier__c.Most_Recent_Tier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Tier__c.Program_Cycle__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Tier__c</fullName>
        <formula>text(Most_Recent_Tier__r.Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Type__c</fullName>
        <label>Cycle Type</label>
        <picklist>
            <picklistValues>
                <fullName>Intake</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reinstatement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_60_Date__c</fullName>
        <description>Date the client hits their 60 Day mark</description>
        <formula>IF(Start_Date__c+60 &gt; End_Date__c, NULL, Start_Date__c + 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day 60 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Sessions_Remaining__c</fullName>
        <formula>value(if( isblank(Mandatory_Sessions_Required__c), &quot;&quot;, text(max(0, Mandatory_Sessions_Required__c - Mandatory_Sessions_Completed__c))))</formula>
        <label>Days/Sessions Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Reason_Other__c</fullName>
        <label>Exit Reason (Other)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Reason__c</fullName>
        <label>Exit Reason</label>
        <picklist>
            <controllingField>Exit_Type__c</controllingField>
            <picklistValues>
                <fullName>7/30 Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Services Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitalized - Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incarcerated - Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met Program Objectives/Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Arrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New VFO Re-Arrest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Warrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient Requests Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss to Follow-Up/No Show for Extended Period</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exit_Type__c</fullName>
        <label>Exit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICM Step-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful Exit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful Exit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extension?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Mandated_Session_Admin__c</fullName>
        <description>Used to populate the end date for CCM cycles after the exit type is selected manually.</description>
        <label>Last Mandated Session (Admin)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Database Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Locked_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Locks a cycle that was imported for a historical client so that the mandate counter is set and cannot be changed by events (therefore the exit date, type and reason are locked too).</description>
        <label>Locked? (Admin)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandate_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandate Modified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandatory_Sessions_Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days/Sessions Completed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mandatory_Sessions_Required__c</fullName>
        <label>Mandated Days/Sessions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MostRecentProgramCycleOld__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Most Recent Program Cycle OLD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Mandated_Cycle_Formula__c</fullName>
        <formula>Client__r.Most_Recent_Mandated_Cycle__c = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Mandated Cycle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Mandated_Cycle_Old__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Most Recent Mandated Cycle? Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Program_Cycle_Formula__c</fullName>
        <formula>Client__r.Most_Recent_Program_Cycle__c = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Program Cycle?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Tier</label>
        <referenceTo>Tier__c</referenceTo>
        <relationshipLabel>Program Cycles</relationshipLabel>
        <relationshipName>Program_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Class_Date__c</fullName>
        <label>Next Class Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_in_Program_Cycle__c</fullName>
        <label>Number of Days in Program</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCFS_End_Date__c</fullName>
        <label>OCFS End Date</label>
        <summarizedField>Tier__c.End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Tier__c.OCFS_Percentage__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Tier__c.Program_Cycle__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCFS_Start_Date__c</fullName>
        <label>OCFS Start Date</label>
        <summarizedField>Tier__c.Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Tier__c.OCFS_Percentage__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Tier__c.Program_Cycle__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Second_BIllable__c</fullName>
        <description>First date past the Expected End Date where a billable encounter took place.</description>
        <label>Second BIllable</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRP_Class_Status_RPT__c</fullName>
        <formula>if(and(ispickval(TRP_Class_Status__c, &apos;Scheduled&apos;), Next_Class_Date__c &lt;= Today()), &apos;Needs to be Verified&apos;, text(TRP_Class_Status__c))</formula>
        <label>Class Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRP_Class_Status__c</fullName>
        <label>Class Status (Admin)</label>
        <picklist>
            <picklistValues>
                <fullName>Needs to be Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Track_End_Date__c</fullName>
        <formula>CASE(Track__c, 
&quot;Misdemeanor ATD&quot;, Start_Date__c + 30,
&quot;Misdemeanor ATI&quot;, Start_Date__c + 90,
&quot;Felony ATD&quot;, Start_Date__c + 120,
&quot;Felony ATI&quot;, Start_Date__c + 190,
NULL)</formula>
        <label>Track End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <picklist>
            <picklistValues>
                <fullName>Felony ATD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Felony ATI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misdemeanor ATD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misdemeanor ATI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Program Cycle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Program Cycle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Cycles</pluralLabel>
    <recordTypes>
        <fullName>CCI_START_Cycle</fullName>
        <active>true</active>
        <label>CCI START Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCM_Program_Cycle</fullName>
        <active>true</active>
        <label>CCM Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCM_Voluntary_Program_Cycle</fullName>
        <active>true</active>
        <label>CCM Voluntary Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>CEO_Program_Cycle</fullName>
        <active>true</active>
        <label>CEO Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>CIRT_Program_Cycle</fullName>
        <active>true</active>
        <label>CIRT Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Choices_Program_Cycle</fullName>
        <active>true</active>
        <label>Choices Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>DTC_Program_Cycle</fullName>
        <active>true</active>
        <label>DTC Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>ONE_Program_Cycle</fullName>
        <active>true</active>
        <label>ONE Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>PEAK_Program_Cycle</fullName>
        <active>true</active>
        <label>PEAK Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>SRP_Program_Cycle</fullName>
        <active>true</active>
        <description>May not need another record type, but for right now users need to create so less confusing</description>
        <label>SRP Program Cycle</label>
    </recordTypes>
    <recordTypes>
        <fullName>TRP_Program_Cycle</fullName>
        <active>true</active>
        <label>TRP Program Cycle</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Edit_End_Date</fullName>
        <active>true</active>
        <description>If Program Cycle record type = SRP, it is editable only if the user&apos;s profile has Edit Program Cycle End Date = True</description>
        <errorConditionFormula>IF(AND(RecordType.DeveloperName = &quot;SRP_Program_Cycle&quot;, $User.Edit_Program_Cycle_End_Date__c = False, ISCHANGED(End_Date__c)), True, false)</errorConditionFormula>
        <errorMessage>You do not have permission to edit the Program Cycle End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Enter_Mandatory_Sessions_Required</fullName>
        <active>false</active>
        <errorConditionFormula>and( or(RecordTypeId = &quot;012J00000008gv0&quot;, RecordTypeId = &quot;012J00000008gv5&quot;),  ispickval(Client__r.Client_Status__c, &quot;Active&quot;), not(ispickval(Cycle_Type__c, &quot;Voluntary&quot;)), isblank(Mandatory_Sessions_Required__c))
/*RecordTypes are for DCP and TCM*/</errorConditionFormula>
        <errorDisplayField>Mandatory_Sessions_Required__c</errorDisplayField>
        <errorMessage>You must enter the number of Mandatory Sessions Required, unless the Cycle Type is voluntary.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PEAK_Cycle_Exit_Reason_Other</fullName>
        <active>true</active>
        <description>If Program Cycle Record Type = PEAK Program Cycle,  Exit Reason = Other, and Exit Reason(Other) is Blank, display error message: : If Exit Reason is Other, please enter the reason in the Exit Reason(Other) text box.</description>
        <errorConditionFormula>IF((AND(RecordType.Name=&quot;PEAK Program Cycle&quot;,  TEXT( Exit_Reason__c ) = &quot;Other&quot;, ISBLANK(Exit_Reason_Other__c )      )), True, False)</errorConditionFormula>
        <errorDisplayField>Exit_Reason_Other__c</errorDisplayField>
        <errorMessage>If Exit Reason is Other, please enter the reason in the Exit Reason(Other) text box</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PEAK_Exit_reason_end_date</fullName>
        <active>true</active>
        <description>If Program Cycle Record Type = PEAK Program Cycle, and Exit Type is NOT blank, and End Date IS blank, display error message: You must enter an End Date in order to enter an Exit Type</description>
        <errorConditionFormula>IF(AND(RecordType.Name=&quot;PEAK Program Cycle&quot;,(ISBLANK( End_Date__c )), NOT(ISBLANK(TEXT( Exit_Type__c )))), True, False)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>You must enter an End Date in order to enter an Exit Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PEAK_not_transfer_end_date_exit_reason</fullName>
        <active>true</active>
        <description>If Program Cycle Record Type = PEAK Program Cycle, and Exit Type is NOT transfer, and End Date is NOT blank, and Exit Reason is blank, display error message: You must enter an Exit Reason</description>
        <errorConditionFormula>IF((AND(RecordType.Name=&quot;PEAK Program Cycle&quot;, NOT(
ISPICKVAL(Exit_Type__c, &quot;Transfer&quot;)), NOT(ISBLANK( End_Date__c )), ISBLANK(TEXT( Exit_Reason__c )))), True, False)</errorConditionFormula>
        <errorDisplayField>Exit_Reason__c</errorDisplayField>
        <errorMessage>If Exit Type is Successful Exit or Unsuccessful Exit, you must enter an Exit Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Cycle_Validation_Rule</fullName>
        <active>true</active>
        <description>If Program Cycle Record Type = PEAK Program Cycle, and End Date is NOT blank, and Exit Type is blank, display error message: You must enter an Exit Type in order to enter an End Date</description>
        <errorConditionFormula>IF(AND(RecordType.Name=&quot;PEAK Program Cycle&quot;, (ISBLANK(Text(Exit_Type__c))), NOT(ISBLANK(End_Date__c))), True, False)</errorConditionFormula>
        <errorDisplayField>Exit_Type__c</errorDisplayField>
        <errorMessage>You must enter an Exit Type in order to enter an End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unsuccessful_exit_validation</fullName>
        <active>false</active>
        <errorConditionFormula>and(ispickval(Exit_Type__c, &quot;Unsuccessful Exit&quot;),
or(
/*DTC*/
and( or(RecordType.DeveloperName = &quot;DTC Program Cycle&quot;, RecordType.DeveloperName = &quot;CCM Program Cycle&quot;),
Days_Sessions_Remaining__c = 0),

/*TRP*/
and( RecordType.DeveloperName = &quot;TRP Program Cycle&quot;, 
 TRP_Class_Status_RPT__c = &quot;Successful&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Exit_Type__c</errorDisplayField>
        <errorMessage>You cannot mark a client as unsuccessfully exited if they have completed their mandate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zero_sessions_remaining_for_success_exit</fullName>
        <active>false</active>
        <errorConditionFormula>and(ispickval(Exit_Type__c, &quot;Successful Exit&quot;),
or(
/*DTC*/
and( or(RecordType.DeveloperName = &quot;DTC Program Cycle&quot;, RecordType.DeveloperName = &quot;CCM Program Cycle&quot;),
Days_Sessions_Remaining__c &gt; 0),

/*TRP*/
and( RecordType.DeveloperName = &quot;TRP Program Cycle&quot;, 
 TRP_Class_Status_RPT__c != &quot;Successful&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Exit_Type__c</errorDisplayField>
        <errorMessage>You cannot mark a client as successfully exited if they have not completed their mandate.</errorMessage>
    </validationRules>
</CustomObject>